[package]
name = "pimon"
version = "0.1.0"
authors = ["Connor Holloway <root_pfad@protonmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "Pi-Hole terminal monitoring tool"
repository = "https://github.com/Scratchcat1/pimon"
keywords = ["pi-hole", "tui"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.9.5"
termion = "1.5.5"
pi-hole-api = "0.1.1"
tokio = "0.2.21"
chrono = "0.4.11"
serde_json = "1.0.55"
structopt = "0.3.14"
serde = { version = "1.0.106", features = ["derive"] }